# university_code

./: timer.cpp  timerXenomai.cpp  timerXenomainew.cpp  timernew.cpp
MDK-Practical-ivan/: calculate_dq.m  direct_kinematics.m  exp_so3.m  exp_twist.m  get_adjoint.m  get_jacobian.m  robot.m  robot_control.m
PassOn/: CMakeLists.txt  PassOn.cpp  package.xml
The Maze/: The Maze v2.cpp  The maze v1.cpp
challenge3/: Alohav1.cpp  alohav1.h  alohav2.cpp
linked lists/: List.h  main.cpp
src/: UI.cpp  main.cpp  mainBackup.cpp
tree/: Tree.h  main.cpp
