<?xml version="1.0"?>
<package format="3">
  <name>PassOn</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for passing on motor setpoint velocities</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
